	* this is to avoid errors related to one thread loading before the other but lacking required information because the other function hasn't finished yet
* wrapped yt.length in float() for gmtime() to help avoid the error "int() argument must be a string, a bytes-like object or a real number, not 'NoneType'"
	* root of problem is sometimes yt.length is not retrieved at all

20230417
YT-DL-GUI Version 0.08
* implemented pause/resume (toggle) and cancel download features
	* subject to change when download queue is implemented, but for now, the download button is disabled while downloading is in progress or paused
* added a label that will display the download progress in text (bytes downloaded vs filesize)
* the user will be warned if the download button was clicked but no stream was selected, and the download will not start
* organized widgets into frames; main_window will consist only of frames that are packed while frames consist of widgets that are arranged in a grid
* implemented a feature where the frames of widgets disappear when the url is invalid, along with an error message
YT-DL-GUI Version 0.07
* user can now enter their preferred file name for the download file
* switched from stream.download() to manually writing from the iterable stream
	* this was necessary to introduce pause/resume and cancel features
	* this makes the on_progress and on_complete functions unnecessary, but will keep them for now to use as reference

20230416
YT-DL-GUI Version 0.06
* decided to change from camelCase to snake_case for consistency with tests of components
* uploaded tests of components to go back to in the future

20230415
YT-DL-GUI Version 0.06
* removed feature to specify video resolution and input stream identification tag (itag)
* replaced the above feature with a feature that shows user the list of available streams, 
  and user can download a stream by choosing from the list of options then clicking the download button